character schema changes/fixes
