# schemas/character/armor.ts
@@ -5,6 +5,7 @@ export const armorTypes = z.enum(['light', 'medium', 'heavy']);
 export const armorObject = z.object({
   AC: z.string(),
   name: z.string(),
+  isAutomaticCalcDisabled: z.boolean().optional(),
   cost: z.string().optional(),
   type: armorTypes.optional(),
   maxDex: z.string().optional(),
