# schemas/character/variations.ts
@@ -1,0 +1,7 @@
+import { z } from 'zod';
+
+
+export const variationsObject = z.object({
+  currentCR: z.number().optional(),
+  currentHD: z.number().optional(),
+});
